--- a/src/styles/StrategicAnalysis.css
+++ b/src/styles/StrategicAnalysis.css
@@ -1,6 +1,6 @@
 /* Main Container */
 .strategic-analysis-container {
-  width: 100%; 
+  width: 100%;
   margin: 0 auto;
   padding: 20px;
 }
@@ -28,6 +28,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -109,14 +110,14 @@
 
 /* Analysis Category */
 .analysis-category {
-  margin-bottom:15px;
+  margin-bottom: 15px;
 }
 
 .category-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 15px !important;
+  padding: 10px 20px !important;
   background-color: #f9fafb;
   /* border: 1px solid #e5e7eb; */
   border-radius: 8px;
@@ -147,7 +148,9 @@
 }
 
 .category-toggle {
-  color: #6b7280;
+  color: #1f2937;
+  display: flex;
+  align-items: center;
 }
 
 /* Category Content */
@@ -322,6 +325,7 @@
 .culture-icon {
   color: #f59e0b;
 }
+
 /* Subsections */
 .subsection {
   margin-bottom: 20px;
@@ -395,7 +399,7 @@
   height: 24px;
   border-radius: 2px;
 }
- 
+
 
 .horizon-label {
   font-size: 15px;
@@ -676,7 +680,7 @@
 .data-table tbody tr:hover {
   background-color: #f9fafb;
 }
- 
+
 .data-table .table-value {
   padding: 5px 10px;
   color: #4b5563;
@@ -724,7 +728,7 @@
 
 /* Strategic Linkages */
 .strategic-linkages-container {
-  background-color: #f9fafb; 
+  background-color: #f9fafb;
   border-radius: 8px;
   padding: 0px;
 }
@@ -787,15 +791,15 @@
   gap: 6px;
 }
 
- .subsection h4 {
-   margin: 0px !important;
-   font-size: 1.2rem;
-   font-weight: 600;
-   color: #3f51b5;
-   border-bottom: none !important;
-   padding-bottom: 8px;
- }
- .subsection .table-container{
-    padding: 0px;
- }
- 
+.subsection h4 {
+  margin: 0px !important;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #3f51b5;
+  border-bottom: none !important;
+  padding-bottom: 8px;
+}
+
+.subsection .table-container {
+  padding: 0px;
+}
